--- a/templates/example.html
+++ b/templates/example.html
@@ -15,7 +15,7 @@
     </main>
 
     <footer>
-        &copy; Мальцева Дарья Алексеевна, ФБИ-13, 3 курс, 2023
+        &copy; {{name}}, ФБИ-13, 3 курс, 2023
     </footer>
     
 </body>
