--- a/templates/example.html
+++ b/templates/example.html
@@ -21,6 +21,16 @@
         11 * 28 = {{ 11 * 28 }} <br>
         8452 / 793 = {{ 8452 / 793 }} <br>
         45**8 = {{ 45**8 }} <br>
+        <ul>
+            {% for f in fruits %}
+            <li> {{f.name}}: {{f.price}} &#x20bd;</li>
+            {% endfor %}
+        </ul>
+        <ol>
+            {% for f in books %}
+            <li> <b>{{f.name}}</b>: {{f.author}}, {{f.genre}}, {{f.pages}} стр.</li>
+            {% endfor %}
+        </ol>
     </main>
 
     <footer>
