--- a/templates/lab2.html
+++ b/templates/lab2.html
@@ -14,3 +14,7 @@
         </li>
     </ol>
 {% endblock %}
+
+{% block menu %}
+    <a href="http://127.0.0.1:5000/menu" target="_blank">Меню</a>
+{% endblock %}
