--- a/templates/lab3.html
+++ b/templates/lab3.html
@@ -7,7 +7,7 @@
     <div>Тема лабораторной - Формы. Список сделанных страниц:</div>
     <ol>
         <li>
-            <a href="/lab3/formal">Форма</a>
+            <a href="/lab3/forml">Форма</a>
         </li>
     </ol>
 {% endblock %}
