--- a/static/main.css
+++ b/static/main.css
@@ -31,3 +31,10 @@ footer {
 .error {
     color: red;
 }
+
+.menu {
+    margin-bottom: 15px;
+    padding: 5px;
+    text-align:center;
+    background-color:antiquewhite;
+}
