--- a/templates/lab3.html
+++ b/templates/lab3.html
@@ -9,6 +9,9 @@
         <li>
             <a href="/lab3/forml">Форма</a>
         </li>
+        <li>
+            <a href="/lab3/order">Заказ напитка</a>
+        </li>
     </ol>
 {% endblock %}
 
