--- a/templates/lab3.html
+++ b/templates/lab3.html
@@ -12,6 +12,9 @@
         <li>
             <a href="/lab3/order">Заказ напитка</a>
         </li>
+        <li>
+            <a href="/lab3/ticketPay">Покупка железнодорожного билета</a>
+        </li>
     </ol>
 {% endblock %}
 
