--- a/static/main.css
+++ b/static/main.css
@@ -38,3 +38,8 @@ footer {
     text-align:center;
     background-color:antiquewhite;
 }
+
+.ticket {
+    padding-bottom: 5px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
