--- a/templates/order.html
+++ b/templates/order.html
@@ -19,7 +19,7 @@
     <form action="/lab3/pay">
         <div>Напиток</div>
         <label>
-            <input type="radio" value="cofee" name="drink" cheсked>Кофе 
+            <input type="radio" value="cofee" name="drink" checked>Кофе 
         </label>
         <label>
             <input type="radio" value="black-tea" name="drink" >Чёрный чай 
@@ -29,10 +29,10 @@
         </label>
         <div>Добавки:</div>
         <label>
-            <input type="checkbox" name="milk" cheked>Молоко 
+            <input type="checkbox" name="milk">Молоко 
         </label>
         <label>
-            <input type="checkbox" name="sugar" cheked>Сахар 
+            <input type="checkbox" name="sugar">Сахар 
         </label>
 
         <div>
