--- a/templates/success.html
+++ b/templates/success.html
@@ -5,8 +5,8 @@
 {% block main %}
 
     <h1>Оплачено</h1>
-    <div>
-        Здравствуйте, {{username}}! Вы успешно вошли, поздравляем
+    <div style="font-size: 20px;">
+        Здравствуйте, <b>{{username}}</b>! Вы успешно вошли, поздравляем
     </div>
     <div>
         <a href="/lab4/login">Авторизация</a>
