--- a/templates/lab4.html
+++ b/templates/lab4.html
@@ -9,7 +9,9 @@
         <li>
             <a href="/lab4/login">Авторизация</a>
         </li>
-        
+        <li>
+            <a href="/lab4/fridge">Холодильник</a>
+        </li>
     </ol>
 {% endblock %}
 
