--- a/templates/login.html
+++ b/templates/login.html
@@ -19,5 +19,7 @@
             <button type="submit">Войти</button>
             <button type="reset">Отмена</button>
         </div>
+        <br>
+        <a href="http://127.0.0.1:5000/lab4/" target="_blank">Меню лабы4</a>
     </form>
 {% endblock %}
