--- a/templates/fridge.html
+++ b/templates/fridge.html
@@ -14,5 +14,7 @@
             <button type="submit">Установить температуру</button>
         </div>
     </form>
+    <br>
+        <a href="http://127.0.0.1:5000/lab4/" target="_blank">Меню лабы4</a>
 
 {% endblock %}
