--- a/templates/lab4.html
+++ b/templates/lab4.html
@@ -12,6 +12,9 @@
         <li>
             <a href="/lab4/fridge">Холодильник</a>
         </li>
+        <li>
+            <a href="/lab4/seed">Заказ зерна</a>
+        </li>
     </ol>
 {% endblock %}
 
