--- a/templates/lab4.html
+++ b/templates/lab4.html
@@ -15,6 +15,9 @@
         <li>
             <a href="/lab4/seed">Заказ зерна</a>
         </li>
+        <li>
+            <a href="/lab4/cookies">Куки</a>
+        </li>
     </ol>
 {% endblock %}
 
