--- a/templates/cookies.html
+++ b/templates/cookies.html
@@ -8,10 +8,22 @@
 
     <form method="post">
         <div>
-            <label for="color"></label>
+            <div style="color: red; background:
+             white; text-align: center;"> <b>{{ error }}</b> </div>
+            <br>
+            <label for="color">Выберете цвет текста: </label>
             <input type="color" id="color" name="color">
+            <br>
+            <br>
+            <label for="background">Выберете цвет фона: </label>
+            <input type="color" id="background" name="background">
+            <br>
+            <br>
+            <label for="number">Выберете размер текста: </label>
+            <input type="number" id="number" name="number">
         </div>
         <div>
+            <br>
             <button type="submit">OK</button>
         </div>
     </form>
