--- a/templates/cookies.html
+++ b/templates/cookies.html
@@ -27,5 +27,6 @@
             <button type="submit">OK</button>
         </div>
     </form>
-
+    <br>
+        <a href="http://127.0.0.1:5000/lab4/" target="_blank">Меню лабы4</a>
 {% endblock %}
