--- a/templates/seed.html
+++ b/templates/seed.html
@@ -25,4 +25,6 @@
             <button type="submit">Оформить заказ</button>
         </div>
     </form>
+    <br>
+        <a href="http://127.0.0.1:5000/lab4/" target="_blank">Меню лабы4</a>
 {% endblock %} 
