--- a/static/main.css
+++ b/static/main.css
@@ -1,10 +1,11 @@
 body {
     margin-left: 20px;
     margin-right: 20px;
-
+    background-color: pink; 
 }
 main {
     padding: 10px;
+    
 }
 
 header {
