--- a/templates/login.html
+++ b/templates/login.html
@@ -20,6 +20,7 @@
             <button type="reset">Отмена</button>
         </div>
         <br>
-        <a href="http://127.0.0.1:5000/lab4/" target="_blank">Меню лабы4</a>
+        <a href="http://127.0.0.1:5000/lab4/" target="_blank">Меню лабы 4</a>
+        <a href="http://127.0.0.1:5000/lab5" target="_blank">Меню лабы 5</a>
     </form>
 {% endblock %}
