--- a/templates/register.html
+++ b/templates/register.html
@@ -4,6 +4,16 @@
 {% block lab %} Лабораторная работа 5 {% endblock %}
 
 {% block main %}
+    <div style="margin-top: 10px;display:flex;justify-content: space-between;">
+        <h1>База знаний</h1>
+        <a href="#">Просмотреть заметки</a>
+        <a href="http://127.0.0.1:5000/lab5/new_article" style="margin-left: -40px;">Создать заметку</a>
+        <a href="http://127.0.0.1:5000/lab5/login" class="log">Логин</a>
+        <a href="http://127.0.0.1:5000/lab5/register" class="reg">Регистрация</a>
+        <p>{{username}}</p>
+    </div>
+    <hr size="1">
+
     <form method="POST" > 
         <h1 style="text-align: center;">Страница регистрации</h1>
 
