просмотр списка статей

--- a/templates/view_article.html
+++ b/templates/view_article.html
@@ -1,9 +1,8 @@
 {% extends "base5.html" %}
 
-{% block lab %}Лабораторная работа 5{% endblock %}
+{% block lab %} Лабораторная работа 5 {% endblock %}
 
 {% block main %}
-    
     <div style="margin-top: 10px;display:flex;justify-content: space-between;">
         <h1>База знаний</h1>
         <a href="http://127.0.0.1:5000/lab5/view_article">Просмотреть заметки</a>
@@ -12,8 +11,20 @@
         <a href="http://127.0.0.1:5000/lab5/register" class="reg">Регистрация</a>
         <p>{{username}}</p>
     </div>
-{% endblock %}
+    <hr size="1">
 
-{% block menu %}
-    <a href="http://127.0.0.1:5000/menu" target="_blank">Меню</a>
+
+    <div>
+        <h1>Заметки {{username}}</h1>
+        <ol>
+            {% for article in articles %}
+                <li style="margin-bottom: 20px; 
+                            border: 2px solid; 
+                            border-radius: 5px;">
+                    <a href="/lab5/articles/{{ article.id }}">{{ article.title }}</a>
+                </li>
+            {% endfor %}
+        </ol>
+    </div>
+
 {% endblock %}
