--- a/static/lab5.css
+++ b/static/lab5.css
@@ -15,8 +15,8 @@ body {
     background-color: pink; 
     margin-left: 20px;
     margin-right: 20px;
-    font-family:cursive
-
+    font-family:cursive;
+    margin-bottom: 50px;
 }
 
 header {
