--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 {% block main %}
     {% if username %}
         <div style="margin-top: 10px;display:flex;justify-content: space-between;">
-            <h1>База знаний</h1>
+            <h1><a href="http://127.0.0.1:5000/lab5">База знаний</a></h1>
             <a href="http://127.0.0.1:5000/lab5/view_article">Просмотреть заметки</a>
             <a href="http://127.0.0.1:5000/lab5/new_article" style="margin-left: -40px;">Создать заметку</a>
             <a href="http://127.0.0.1:5000/lab5/login" class="log">Логин</a>
@@ -14,7 +14,7 @@
         </div>
     {% else %}
         <div style="margin-top: 10px;display:flex;justify-content: space-between;">
-        <h1>База знаний</h1>
+        <h1><a href="http://127.0.0.1:5000/lab6">База знаний</a></h1>
         <a href="http://127.0.0.1:5000/lab6/articles">Просмотреть заметки</a>
         <a href="http://127.0.0.1:5000/lab6/new_article" style="margin-left: -40px;">Создать заметку</a>
         <a href="http://127.0.0.1:5000/lab6/login" class="log">Логин</a>
