--- a/templates/lab8/index.html
+++ b/templates/lab8/index.html
@@ -28,6 +28,7 @@
             <th>Количество видеороликов</th>
             <th>Цена</th>
             <th>Действие</th>
+            <th>Дата создания</th>
         </tr>
     </thead>
     <tbody id="course-list"></tbody>
